# AI_Ops_Tool

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .env  .env.development.example  .env.example  .env.production.example  alembic.ini  pyproject.toml
backend/aiops_platform_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 202607200001_initial_schema.py  202607210001_complete_admin_models.py  202607210002_audit_sequence.py  202607210003_repair_audit_chain.py  202607210004_search_indexes.py  202607210005_discovery.py  202607210006_discovery_schedule_owner.py  202607210007_report_server_target.py  202607210008_tool_configurations.py  202607210009_codex_cli_runtime.py  202607220001_persistent_ai_workspace.py  202607220002_chat_audit_context.py  202607220003_repair_ai_session_system_scope.py  202607220004_ai_chat_runtime_options.py  202607220005_single_ai_tool_contract.py  202607220006_system_ssh_credentials.py  202607220007_split_legacy_ssh_credentials.py  202607230001_ssh_command_manager.py  202607230002_default_ssh_gateway.py  (+3 more)
backend/app/: __init__.py  main.py
backend/config/: providers.json  providers.yaml
backend/data/: aiops.db
backend/tests/: conftest.py  test_ai_adapter.py  test_auth_api.py  test_command_consent.py  test_command_guard.py  test_discovery.py  test_functional_api.py  test_inventory_excel.py  test_local_simulation_adapter.py  test_policy_and_tools.py  test_workspace.py
docker/: nginx.conf  (+3 more)
(+276 files in other folders)
