[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiops-platform-backend"
version = "0.1.0"
description = "Enterprise AI Infrastructure Operations Platform backend"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20.0",
  "asyncpg>=0.30.0",
  "alembic>=1.14.0",
  "asyncssh>=2.17.0",
  "bcrypt>=4.2.0",
  "cryptography>=44.0.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.6",
  "httpx>=0.28.1",
  "opentelemetry-api>=1.29.0",
  "opentelemetry-sdk>=1.29.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
  "opentelemetry-instrumentation-fastapi>=0.50b0",
  "openpyxl>=3.1.5",
  "pydantic-settings>=2.7.0",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.20",
  "PyYAML>=6.0.2",
  "pypdf>=5.1.0",
  "reportlab>=4.2.5",
  "prometheus-client>=0.21.1",
  "sqlalchemy[asyncio]>=2.0.36",
  "structlog>=24.4.0",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.8.4",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
